# EMG_Arm

./: .gitignore  CMakeLists.txt  emg_gui.py  learning_data_collection.py  learning_emg_filtering.py  partitions.csv  platformio.ini  requirements.txt  sdkconfig.esp32-s3-devkitc1-n16r16  sdkconfig.esp32-s3-devkitc1-n16r16.old  serial_stream.py
EMG_Arm/: platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-devkitc1-n16r16  sdkconfig.esp32-s3-devkitc1-n16r16.old
EMG_Arm/src/: CMakeLists.txt  gestures.c  gestures.h  main.c  servo.c  servo.h
EMG_Arm/src/app/: main.c
EMG_Arm/src/config/: config.h
EMG_Arm/src/core/: gestures.c  gestures.h  inference.c  inference.h  model_weights.h
EMG_Arm/src/drivers/: emg_sensor.c  emg_sensor.h  hand.c  hand.h
EMG_Arm/src/hal/: servo_hal.c  servo_hal.h
collected_data/: esp32_test_001_20260119_214904.hdf5  latency_fix_100_20260127_184804.hdf5  latency_fix_101_20260127_185344.hdf5  latency_fix_102_20260127_190022.hdf5  latency_fix_103_20260127_191249.hdf5  latency_fix_104_20260127_195150.hdf5  latency_fix_105_20260127_195503.hdf5  new_placements_000_20260127_174231.hdf5  user_001_20260108_170626.hdf5  user_001_20260108_171851.hdf5  user_001_20260108_172535.hdf5  user_001_20260108_174542.hdf5  user_001_20260108_174934.hdf5  user_001_20260109_215307.hdf5  user_001_20260119_214559.hdf5  user_002_20260108_175610.hdf5  user_002_20260108_220204.hdf5  user_003_20260109_154733.hdf5  user_003_20260109_215459.hdf5  user_004_20260110_154828.hdf5
extra_data/: emg_real_001_20260125_132316.hdf5  emg_real_001_20260125_133141.hdf5  (+10 more)
(+2 files in other folders)
